# hdc-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: pyO3-CI.yml  python-publish.yml  rust.yml
examples/: blocking_demo.rs  comprehensive.rs  device_monitor.rs  forward_demo.rs  list_devices.rs  simple_shell.rs
hdc-py/: BUILD.md  CHEATSHEET.md  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md  START_HERE.md  build.ps1  pyproject.toml  test_basic.py
hdc-py/examples/: app_management.py  basic.py  comprehensive.py  device_logs.py  file_transfer.py  port_forward.py
hdc-py/src/: lib.rs
hdc-rs/: Cargo.toml
hdc-rs-py/: BUILD.md  CHEATSHEET.md  Cargo.toml  QUICKSTART.md  README.md  build.ps1  build.sh  pyproject.toml
hdc-rs-py/examples/: app_management.py  basic.py  comprehensive.py  device_logs.py  file_transfer.py  port_forward.py  streaming_demo.py  test_streaming.py
hdc-rs-py/src/: lib.rs
hdc-rs/examples/: app_demo.rs  blocking_demo.rs  blocking_monitor.rs  device_monitor_demo.rs  file_demo.rs  hilog_demo.rs  hilog_stream_demo.rs  list_devices.rs  multi_shell_demo.rs  simple_shell.rs  test_shell_simple.rs
hdc-rs/src/: app.rs  blocking.rs  client.rs  error.rs  file.rs  forward.rs  lib.rs
hdc-rs/src/protocol/: channel.rs  command.rs  mod.rs  packet.rs
tests/: forward_app_test.rs  integration_test.rs
