[workspace]
resolver = "2"
members = [
    "hdc-rs",
    "hdc-rs-py"
]

# Shared package metadata
[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oslo254804746/hdc-rs"
homepage = "https://github.com/oslo254804746/hdc-rs"
authors = ["HDC-RS Contributors"]

# Optimize release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0