[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "hdc-rs-py"
version = "0.1.0"
description = "Python bindings for HarmonyOS Device Connector (HDC) client library"
readme = "../README.md"
requires-python = ">=3.8"
authors = [
    { name = "HDC-RS Contributors" }
]
keywords = ["harmonyos", "hdc", "device", "connector", "openharmony"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
