[package]
name = "hdc-rs-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Python bindings for HarmonyOS Device Connector (HDC)"
publish = false  # Python bindings are published via PyPI

[lib]
name = "hdc_rs_py"  # Python module name
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
hdc-rs = { path = "../hdc-rs", features = ["blocking"] }