[package]
name = "hdc-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Rust client library for HarmonyOS Device Connector (HDC)"
documentation = "https://docs.rs/hdc-rs"
readme = "../README.md"
keywords = ["hdc", "harmonyos", "ohos", "device", "debug"]
categories = ["development-tools", "network-programming", "api-bindings"]

[features]
default = []
blocking = []

[dependencies]
tokio = { version = "1.49", features = ["net", "time", "sync", "macros", "rt-multi-thread", "io-util"] }
bytes = "1.11"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "hdc_rs"
path = "src/lib.rs"

# For crates.io publishing
[[example]]
name = "list_devices"
path = "examples/list_devices.rs"
required-features = []



[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

